# Clustering

./: .gitignore  AnalyseDAQClustering.cxx  AnalyseOpticalCluster.cxx  BiTrigger.cc  CMakeLists.txt  ClusterEnergyEstimator.cc  ClusterEnergyEstimator.hh  ClusterEngine.cc  ClusterEngine.hh  ClusterSelector.hh  Clustering.cc  Clustering.hh  CreateReweightingScheme.cxx  Display.hh  ElapsedTimeStudy.py  EventInspector.hh  GetEffBackRate.cxx  Helper.h  HitSimplePlot.hh  InputManager.h  NeutronInfo.cxx  OpticalCluster.cc  OpticalCluster.hh  OpticalHit.cc  OpticalHit.hh  PhotonTimingDisplay.cc  PhotonTimingDisplay.hh  PhotonWirePositionDisplay.cc  PhotonWirePositionDisplay.hh  PlotPhilHitFinding.C  README.md  RunBiTrigger.cxx  RunDAQClustering.cxx  RunEventDisplay.cxx  RunPhilTriggerPrimitive.sh  RunSimpleHitInfo.cxx  RunSmartTrigger.cxx  SimpleGeom.hh  SmartTrigger.cc  SmartTrigger.hh  (+10 more)
Algorithm/: AdvancedClustering.cc  AdvancedClustering.hh  CMakeLists.txt  ClusterEnergyEstimator.hh  ClusterEngine.cc  ClusterEngine.hh  SmartTrigger.cc  SmartTrigger.hh  SmartTriggerToyThrower.cc  SmartTriggerToyThrower.hh  Trigger.hh
Analyser/: AnalyseBackgroundOpticalCluster.cxx  AnalyseDAQClustering.cxx  AnalyseInputFile.cxx  AnalyseInputFile_Arb.cxx  AnalyseOpticalCluster.cxx  AnalyseWireClustering_SolarNu.cxx  BackgroundRateCalculator.cxx  BurstEfficiencyCalculator.hh  CMakeLists.txt  DumpRate.cxx  EfficiencyCalculator.cxx  EventInspector.hh  GetEffBackRate.cxx  GetEffBackRate_Separated.cxx  PDSTiming.cxx  PlotEfficiencyAtNCut.cxx
Analyser/app/: AnalyseBackgroundOpticalCluster.cxx  AnalyseDAQClustering.cxx  AnalyseInputFile.cxx  AnalyseInputFile_Arb.cxx  AnalyseOpticalCluster.cxx  AnalyseWireClustering_SolarNu.cxx  BackgroundRateCalculator.cxx  CMakeLists.txt  ClusterComparison.cxx  EfficiencyCalculator.cxx  GetBackgroundRateAt50PerCent.cxx  GetEffBackRate.cxx  InductionEfficiencyCalculator.cxx  MatchingEfficiencyCalculator.cxx  OptimiseNHitCut.cxx  OptimiseNPECut.cxx  PlaneMatching.cxx  PlotEfficiencyAtNCut.cxx  ThreeDimensionalClusterAnalyzer.cxx
BurstTrigger/: Analyse_GH_SNMC.txt  Analyse_Photon.txt  Analyse_SNBurst_GH_SNMC.txt  Analyse_SNBurst_Photon.txt  CMakeLists.txt  Configuration.hh  LinkDef.h  MakeSNTheoryDistributions.C  Module_SNBurst.cxx  Module_SNBurst_Latency.cxx  NeutronRate.cxx  Plotting_SNBurst.C  RequirementEfficiency.cxx  ResultPhilDefaultNoise.txt  SNBurstTrigger.cc  SNBurstTrigger.hh  SmartTrigger.C  SmartTrigger.h  TimingDistribMarley.C  Utils.hh  colors.h  unnamed.C
BurstTrigger/data/: SNTheoryDistributions.root  TimeProfile.root
Clustering/: CMakeLists.txt  Clustering.cc  Clustering.hh  ClusteringBase.hh  FindGperftools.cmake  PlotEfficiencySmartTrigger.C  RunDAQClustering_WireOnly.cxx  test.cpp
Clustering/app/: CMakeLists.txt  RunDAQClustering.cxx  RunDAQClustering_PhotonOnly.cxx  RunDAQClustering_WireOnly.cxx
DataContainer/: CMakeLists.txt  Cluster.hh  Hit.hh  OpticalCluster.hh  OpticalHit.cc  OpticalHit.hh  WireCluster.cc  WireCluster.hh  WireHit.hh
Dumper/: CMakeLists.txt  DumpForAI.cxx  DumpForAI_Arbitrary.cxx
EventDisplay/: CMakeLists.txt  Display.hh  PhotonTimingDisplay.cc  PhotonTimingDisplay.hh  PhotonWirePositionDisplay.cc  PhotonWirePositionDisplay.hh  WirePositionTimingDisplay.cc  WirePositionTimingDisplay.hh
FileLists/: prodmarley_nue_spectrum_radiological_timedep_hudepohl_1.2M_3perevent_dune10kt_1x2x6_snanatrigprim2000_clustered_manyconfig.list  prodmarley_nue_spectrum_radiological_timedep_hudepohl_1.2M_3perevent_dune10kt_1x2x6_snanatrigprim2000_clustered_manyconfig_10files.list
IO/: DataAnaInputManager.hh  InputManager.hh  OutputManager.hh
QuickAnalyses/: BiTrigger.hh  CMakeLists.txt  CheckPhotonMCC11.C  EventInspector.hh  NeutronStudyInd.cxx  Optimiser.cxx  Optimiser2D.cxx  Outlier.cxx  RunXDependance.cxx  RunXDependancy.cxx
QuickAnalyses/app/: CMakeLists.txt  Cos.cxx  FindAndPlotHighSumADC.py  MakeEventDisplay.C  MakeNeutronGammaEnergyPlot.py  MakePDFInversion.C  MakePDFInversion.py  MakePEPlotForJose.cxx  NeutronInfo.cxx  NeutronStudyInd.cxx  Optimiser.cxx  Optimiser2D.cxx  Outlier.cxx  PDSTiming.cxx  RunBiTrigger.cxx  RunThreshold.cxx  RunXDependance.cxx
RadiologicalCheatGenerator/: CMakeLists.txt  RadiologicalCheatGenerator.cc  RadiologicalCheatGenerator.hh  RunGenerator.cxx  RunLArSoftMerge.py  SourceMe.sh
RadiologicalCheatGenerator/data/: Concrete_DUNE1.root
TDRPlots/: ._EfficiencyPlot.hh  CMakeLists.txt  EfficiencyPlot.hh  EfficiencyPlotMarley.hh  HitComparison.hh  RunHitComparison.cxx  RunTDRPlot.cxx  SimpleEfficiencyPlot.hh
TriggerDecision/: CMakeLists.txt  RunSmartTrigger.cxx  RunSmartTriggerStatisticalTests.cxx  StatisticalTest.hh  TriggerSensitivityCalculator.hh
TriggerDecision/app/: CMakeLists.txt  DumpForStatisticalTrigger.cxx  MakeLatencyPlotBestCase.py  MakeLikelihoodPlots.py  MakePlots.cpp  MakePlots.py  MakeSumADC5MeV.py  MakeSumADCENuPlotLookup.py  RunSmartTriggerLatency.cxx  RunSmartTriggerStatisticalTests.cxx  SignalBackgroundPDFs.cxx
clustering/: ._SolarPlot.cxx  AdvancedClustering.cc  AdvancedClustering.hh  AnalyseDAQClustering.cxx  AnalyseOpticalCluster.cxx  AnalyseTreshold.cxx  AnalyseWireClustering_SolarNu.cxx  ArbitraryAnaInputManager.hh  BiTrigger.cc  BiTrigger.hh  BurstEfficiencyCalculator.hh  CMakeLists.txt  Cluster.hh  ClusterEnergyEstimator.cc  ClusterEnergyEstimator.hh  ClusterEngine.cc  ClusterEngine.hh  Clustering.cc  Clustering.hh  ClusteringBase.hh  CreateReweightingScheme.cxx  Display.hh  DumpForAI.cxx  DumpForAI_Arbitrary.cxx  DumpRate.cxx  EfficiencyCalculator.cxx  EventInspector.hh  Exceptions.hh  GetBackgroundRateAt50PerCent.cxx  GetEffBackRate.cxx  Helper.h  Hit.hh  HitSimplePlot.cc  HitSimplePlot.hh  InputManager.h  InputManager.hh  MyCLI11.hh  NeutronInfo.cxx  NeutronStudy.cxx  NeutronStudyInd.cxx  (+34 more)
clustering/Scripts/: BatchWorker_PhotonMultipleConfig_MCC11.sh  HaddFiles.py  RunClusteringOptical.py  RunFromFileList.py  RunFromFileList_3.py  SetupUPS.sh
clustering/data/: ._BackgroundFromPaper.txt  ._DataFromPaper.txt  BackgroundFromPaper.txt  DataFromPaper.txt  SNRate.root
(+31 files in other folders)
