# add_executable(SmartTrigger                 RunSmartTrigger.cxx                )
# #add_executable(SmartTriggerStatisticalTests RunSmartTriggerStatisticalTests.cxx)
# target_link_libraries(SmartTrigger                 Clustering)
# target_link_libraries(SmartTriggerStatisticalTests Clustering)


add_subdirectory(app)
