#add_executable(AnalyseBackgroundOpticalCluster AnalyseBackgroundOpticalCluster.cxx)
add_executable(AnalyseDAQClustering            AnalyseDAQClustering.cxx           )
#add_executable(AnalyseInputFile_Arb            AnalyseInputFile_Arb.cxx           )
#add_executable(AnalyseInputFile                AnalyseInputFile.cxx               )
#add_executable(AnalyseOpticalCluster           AnalyseOpticalCluster.cxx          )
#add_executable(AnalyseWireClustering_SolarNu   AnalyseWireClustering_SolarNu.cxx  )
#add_executable(BackgroundRateCalculator        BackgroundRateCalculator.cxx       )
#add_executable(DumpRate                        DumpRate.cxx                       )
#add_executable(EfficiencyCalculator            EfficiencyCalculator.cxx           )
#add_executable(GetBackgroundRateAt50PerCent    GetBackgroundRateAt50PerCent.cxx   )
add_executable(GetEffBackRate                  GetEffBackRate.cxx                 )
#add_executable(OptimiseNHitCut                 OptimiseNHitCut.cxx                )
#add_executable(OptimiseNPECut                  OptimiseNPECut.cxx                 )
#add_executable(PlotEfficiencyAtNCut            PlotEfficiencyAtNCut.cxx           )

#target_link_libraries(AnalyseBackgroundOpticalCluster ${ROOT_LIBRARIES})
target_link_libraries(AnalyseDAQClustering            ${ROOT_LIBRARIES})
#target_link_libraries(AnalyseInputFile_Arb            DataContainer Algorithm ${ROOT_LIBRARIES})
#target_link_libraries(AnalyseInputFile                DataContainer Algorithm ${ROOT_LIBRARIES})
#target_link_libraries(AnalyseOpticalCluster           ${ROOT_LIBRARIES})
#target_link_libraries(AnalyseWireClustering_SolarNu   ${ROOT_LIBRARIES})
#target_link_libraries(BackgroundRateCalculator        DataContainer Algorithm ${ROOT_LIBRARIES})
#target_link_libraries(DumpRate                        ${ROOT_LIBRARIES})
#target_link_libraries(EfficiencyCalculator            DataContainer Algorithm ${ROOT_LIBRARIES})
#target_link_libraries(GetBackgroundRateAt50PerCent    ${ROOT_LIBRARIES})
target_link_libraries(GetEffBackRate                  ${ROOT_LIBRARIES})
#target_link_libraries(OptimiseNHitCut                 ${ROOT_LIBRARIES})
#target_link_libraries(OptimiseNPECut                  ${ROOT_LIBRARIES})
#target_link_libraries(PlotEfficiencyAtNCut            ${ROOT_LIBRARIES})
