add_executable(MakePEPlotForJose     MakePEPlotForJose.cxx)
add_executable(PDSTiming             PDSTiming.cxx        )
add_executable(NeutronInfo           NeutronInfo.cxx      )
add_executable(NeutronStudyInd       NeutronStudyInd.cxx  )
add_executable(Optimiser2D           Optimiser2D.cxx      )
add_executable(Optimiser             Optimiser.cxx        )
add_executable(RunBiTrigger          RunBiTrigger.cxx     )
add_executable(Threshold             RunThreshold.cxx     )
add_executable(CosSpeed              Cos.cxx     )

target_link_libraries(MakePEPlotForJose    Algorithm DataContainer ${ROOT_LIBRARIES})
target_link_libraries(PDSTiming            Algorithm DataContainer ${ROOT_LIBRARIES})
target_link_libraries(NeutronInfo          Algorithm DataContainer ${ROOT_LIBRARIES})
target_link_libraries(NeutronStudyInd      Algorithm DataContainer ${ROOT_LIBRARIES})
target_link_libraries(Optimiser2D          Algorithm DataContainer ${ROOT_LIBRARIES})
target_link_libraries(Optimiser            Algorithm DataContainer ${ROOT_LIBRARIES})
target_link_libraries(RunBiTrigger         Algorithm DataContainer BiTrigger ${ROOT_LIBRARIES})
target_link_libraries(Threshold            Algorithm DataContainer ${ROOT_LIBRARIES})
target_link_libraries(CosSpeed             ${ROOT_LIBRARIES})
